# TradeFlow-Core

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/invoice_nft/: Cargo.toml
contracts/invoice_nft/src/: lib.rs
contracts/lending_pool/src/: lib.rs
